--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Static Top Navbar Example for Bootstrap</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
 
 
   <!-- Custom styles for this template -->
@@ -66,9 +66,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="application.js"></script>
+    <script src="vendor/bootstrap//js/bootstrap.min.js"></script>
+    <script src="js/application.js"></script>
   </body>
   </html>
