--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Resume</a></li>
-              <li><a href="http://blog.liorrmorrison.com">Blog<span class="sr-only"></span></a></li>
+              <li><a href="resume.pdf" target="_blank">Resume</a></li>
+              <li><a href="http://blog.liorrmorrison.com" target="_blank">Blog<span class="sr-only"></span></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
