--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
       <div class="container">
-        <div class="airplane-img"><img src="/img/elal777.png"></div>
+        <div class="airplane-img hidden"><img src="/img/elal777.png"></div>
 
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
