tweaks geography question

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
         <div class="greeting">Hi! I'm Liorr :)</div>
-          <p>I'm a <a class="quirk polyglot" href="">polyglottic</a>, <a class="quirk geography" href="">geography-obsessed</a>, <a class="quirk airplane" href="">plane-spotting</a> <a href="https://github.com/liorrm" target="_blank">web developer</a></p>
+          <p>I'm a <a class="quirk polyglot" href="">polyglottic</a>, <a class="quirk geography" href="">geography-obsessed</a>, <a class="quirk airplane" href="">plane-spotting</a> <a href="https://github.com/liorrm" target="_blank">web developer</a>.</p>
           <p class="hidden-stuff"></p><button class="tell-me hidden">Tell me!</button>
           <p class="answer"></p>
         </div>
