adds second jet surprise

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
       <div class="container">
-        <div class="airplane-img hidden"><img src="/img/elal777.png"></div>
+        <div class="airplane-img hidden"><img id="jet-img" src="/img/elal777.png"></div>
 
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
@@ -56,6 +56,7 @@
           <p class="answer"></p>
         </div>
       </div> <!-- /container -->
+      <div class="a380-airplane-img hidden"><img src="/img/a380.png"></div>
 
 
     <!-- Bootstrap core JavaScript
