adds jet img class for responsiveness

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>LYM</title>
+  <title>Liorr Yehuda Morrison</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
 
 
       <div class="container">
-        <div class="airplane-img hidden"><img id="jet-img" src="/img/elal777.png"></div>
+        <div class="airplane-img hidden"><img class="jet-img" src="/img/elal777.png"></div>
 
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
@@ -55,8 +55,8 @@
           <p class="hidden-stuff"></p><button class="tell-me hidden">Tell me!</button>
           <p class="answer"></p>
         </div>
+      <div class="a380-airplane-img hidden"><img class="jet-img" src="/img/a380.png"></div>
       </div> <!-- /container -->
-      <div class="a380-airplane-img hidden"><img src="/img/a380.png"></div>
 
 
     <!-- Bootstrap core JavaScript
